@@ -97,6 +97,8 @@ void
 rb_exec_end_proc(void)
 {
     struct end_proc_data *volatile link;
+    struct end_proc_data *ephemeral_end_procs_head = ephemeral_end_procs;
+    struct end_proc_data *end_procs_head = end_procs;
     int status;
     volatile int safe = rb_safe_level();
     rb_thread_t *th = GET_THREAD();
@@ -116,7 +118,6 @@ rb_exec_end_proc(void)
 	    error_handle(status);
 	    if (!NIL_P(th->errinfo)) errinfo = th->errinfo;
 	}
-	xfree(link);
     }
 
     while (end_procs) {
@@ -133,8 +134,20 @@ rb_exec_end_proc(void)
 	    error_handle(status);
 	    if (!NIL_P(th->errinfo)) errinfo = th->errinfo;
 	}
-	xfree(link);
     }
+
+    link = ephemeral_end_procs_head;
+    while (link) {
+	xfree(link);
+	link = link->next;
+    }
+
+    link = end_procs_head;
+    while (link) {
+	xfree(link);
+	link = link->next;
+    }
+
     rb_set_safe_level_force(safe);
     th->errinfo = errinfo;
 }
