@@ -1,3 +1,10 @@
+Sat Nov 16 00:18:36 2013  Masaki Matsushita  <glass.saga@gmail.com>
+
+	* eval_jump.c (rb_exec_end_proc): fix double free or corruption error
+	  when reentering by callcc. [ruby-core:58329] [Bug #9110]
+
+	* test/ruby/test_beginendblock.rb: test for above.
+
 Fri Nov 15 22:21:34 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* hash.c (hash_foreach_iter, hash_foreach_ensure, rb_hash_foreach):
